Log patterns analysis tool (#625)
* Add LogPatternAnalysisTool

Signed-off-by: Binlong Gao <gbinlong@amazon.com>
Signed-off-by: Hailong Cui <ihailong@amazon.com>

* output more for log pattern analysis

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* adjust the order of comparing selection and baseline

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* log pattern analysis

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* using HCA as clustering method

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* log pattern analysis

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* using cosine similarity

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* result format change

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* Improve processing speed through sharding.

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* add more error keywords

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* refactor and ignore single trace for log sequence

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* fix unit test

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* limit top 10 difference

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* don't remove signle trace id event for log sequence analysis

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* remove unused code

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* add input schema for MCP

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* fix spottless

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* fix ci

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* add extractInputParameters

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* add:UT&IT

Signed-off-by: Jiaru Jiang <jiaruj@amazon.com>

* using aggregation mode to improve performance

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* fix:spotlessCheck

Signed-off-by: Jiaru Jiang <jiaruj@amazon.com>

* add:ClusteringHelperTests

Signed-off-by: Jiaru Jiang <jiaruj@amazon.com>

* fix:ClusteringHelperTests spotlessCheck failed

Signed-off-